[gd_scene load_steps=7 format=3 uid="uid://d4in7v80fs4g5"]

[ext_resource type="Script" path="res://src/main/canvas_container/canvas_container.gd" id="1_pvtiu"]
[ext_resource type="Script" path="res://src/main/canvas_container/tool/pen.gd" id="3_nf0la"]
[ext_resource type="Script" path="res://src/main/canvas_container/tools.gd" id="3_s7dgr"]
[ext_resource type="Script" path="res://src/main/canvas_container/input_board.gd" id="3_wuo3d"]
[ext_resource type="Script" path="res://src/main/canvas_container/tool/move.gd" id="4_y3iy2"]
[ext_resource type="Script" path="res://src/main/canvas_container/tool/eraser.gd" id="6_uu5ft"]

[node name="CanvasContainer" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_pvtiu")
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
clip_contents = true
layout_mode = 2

[node name="BackgroundPanel" type="Panel" parent="ScrollContainer/MarginContainer"]
layout_mode = 2

[node name="ImageLayers" type="Control" parent="ScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="InputBoard" type="Control" parent="ScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("3_wuo3d")

[node name="move_image_ref" type="ReferenceRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 100.0
offset_bottom = 100.0
mouse_filter = 2
border_color = Color(0.309804, 0.309804, 0.309804, 0.717647)
editor_only = false

[node name="tools" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_s7dgr")

[node name="pen" type="Node" parent="tools"]
script = ExtResource("3_nf0la")

[node name="eraser" type="Node" parent="tools"]
script = ExtResource("6_uu5ft")

[node name="move" type="Node" parent="tools"]
script = ExtResource("4_y3iy2")

[connection signal="draw_finished" from="tools/pen" to="." method="_draw_finished"]
[connection signal="drawn" from="tools/pen" to="." method="draw_by_data"]
[connection signal="ready_draw" from="tools/pen" to="." method="_ready_draw"]
[connection signal="erase_finished" from="tools/eraser" to="." method="_draw_finished"]
[connection signal="erased" from="tools/eraser" to="." method="draw_by_data"]
[connection signal="ready_erase" from="tools/eraser" to="." method="_ready_draw"]
[connection signal="move_finished" from="tools/move" to="." method="_on_move_move_finished"]
[connection signal="move_position" from="tools/move" to="." method="_on_move_move_position"]
[connection signal="ready_move" from="tools/move" to="." method="_on_move_ready_move"]
